:sparkles: Add SearchBarからCollectionViewのアイテム絞り込み実装

--- a/FunRecipePrototype/CookingRecord/CookingRecordViewController.xib
+++ b/FunRecipePrototype/CookingRecord/CookingRecordViewController.xib
@@ -11,6 +11,7 @@
             <connections>
                 <outlet property="categoryCollectionView" destination="3fW-gT-XjY" id="T0A-62-hke"/>
                 <outlet property="collectionView" destination="C0s-cW-hPa" id="C45-LT-mA9"/>
+                <outlet property="searchBar" destination="ic6-Qr-7XM" id="EJi-tP-iJV"/>
                 <outlet property="view" destination="Eec-sr-e30" id="AFc-le-Yag"/>
             </connections>
         </placeholder>
